--- a/wcagemtool/app/locale/EN/scope.json
+++ b/wcagemtool/app/locale/EN/scope.json
@@ -4,10 +4,13 @@
     "LABEL_SITE_NAME": "Website name",
     "INF_SITE_NAME": "Provide a name for the website that you would like to evaluate. For example:<ul><li>Public website of the organisation Example</li><li>Website of the organisation Example</li><li>University intranet</li></ul>",
     "LABEL_SITE_SCOPE": "Scope of the website",
-    "INF_SITE_SCOPE_0": "Define the scope of the website, so it is clear which web pages are included in the evaluation. For example:",
-    "INF_SITE_SCOPE_LI0": "'All web content of the public website of Example Org. located at http://www.example.org'",
-    "INF_SITE_SCOPE_LI1": "'All web content of the online shop of Example Org. located at http://www.example.org/shop/'",
-    "INF_SITE_SCOPE_LI2": "'All web content of the mobile version of the public website of Example Org. located at http://m.example.org'",
+    "INF_SITE_SCOPE_0": "Specify if there is a part or parts of the website that will NOT be analysed because it is outside the scope",
+    "INF_SITE_SCOPE_LI0": "When there are pages, contents or documents that are outside the scope of RD 1112/2018. For example, it should be indicated that PDF documents located in XXX are not analysed because they were published before the entry into force of the RD",
+    "INF_SITE_SCOPE_LI1": "When different websites of an organisation have urls as follows:",
+    "INF_SITE_SCOPE_LI1_1": "URL of website 1 'http://www.xxxxxx/sitioweb1/'",
+    "INF_SITE_SCOPE_LI1_2": "URL of website 2 'http://www.xxxxx/sitioweb2/'",
+    "INF_SITE_SCOPE_LI1_INFO": "If the report is from Site 1, only the pages within the directory '/sitioweb1/' will be analysed because those outside '/sitioweb1/ belong to another website that is not being analysed in this report",
+    "INF_SITE_SCOPE_LI2": "All the content of the mobile version of the public website Example, located at http://m.ejemplo.org",
     "INF_SITE_SCOPE_1": "WCAG-EM Step 1.a: Define the Scope of the Website",
     "LABEL_WCAG_VERSION": "WCAG Version",
     "INFO_WCAG_VERSION": "Select the WCAG version to be used. Remember that the version required by law is WCAG 2.1 (default), which is the version of the WCAG aligned to the <a href='https://www.etsi.org/deliver/etsi_en/301500_301599/301549/02.01.02_60/en_301549v020102p.pdf' title='PDF document of the EN 301 549 V2.1.2 (2018-08) standard (opens in new window)'>EN 301 549 V2 standard. 1.2 (2018-08)</a>, declared as a harmonised standard by the European Commission in the <a href='https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32018D2048' title='Commission Implementing Decision (EU) 2018/2048 (opens in new window)'>Commission Implementing Decision (EU) 2018/2048</a>.",
