Seeds less treshold table imporvments
Former-commit-id: b7df6f86d2b02c2b95cf42cd3ef3754d046e0ba9

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2553,6 +2553,8 @@ observatory.status.notes.running                                              = 
 observatory.status.notes.title                                                = Notas:
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
+observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas
+observatory.status.percent.threshold.filter.percent                           = % de p\u00E1ginas analizadas
 observatory.status.summary.seed.processed                                     = Semillas procesadas
 observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
 observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
