--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2752,6 +2752,8 @@ observatory.status.pending.caption                                            = 
 observatory.status.pending.name                                               = Nombre\n
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
+observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas
+observatory.status.percent.threshold.filter.percent                           = % de p\u00E1ginas analizadas
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
