Add extra data to anexo_portales.xml and anexo_paginas.mxl
Filter results to exports by tags ands observatory execution


Former-commit-id: 7b3a5cf4ab19a6246d68412793c4ad007d68da12

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -434,46 +434,51 @@ conectividad.url.vacia.error          = Debe introducir una URL
 configurar.agregado.info  = Configure los filtros para generar el informe agregado
 configurar.agregado.title = Configurar informe agregado
 
-confirmacion.borrar.cartucho                              = Eliminar Cartucho
-confirmacion.borrar.cartucho.aplicacion                   = Aplicaci\u00F3n: 
-confirmacion.borrar.cartucho.cartucho                     = Cartucho:
-confirmacion.borrar.cartucho.eliminacion.rastreo          = Se eliminaran los siguientes Rastreos:
-confirmacion.borrar.cartucho.pregunta                     = \u00BFEsta seguro que desea eliminar el siguiente cartucho?
-confirmacion.borrar.cartucho.title                        = Eliminar Cartucho
-confirmacion.desinstalar.cartucho                         = Desinstalar Cartucho
-confirmacion.desinstalar.cartucho.aplicacion              = Aplicaci\u00F3n: 
-confirmacion.desinstalar.cartucho.cartucho                = Cartucho: 
-confirmacion.desinstalar.cartucho.info                    = Se borrar\u00E1n todos los rastreos y usuarios asociados al cartucho 
-confirmacion.desinstalar.cartucho.pregunta                = \u00BFEST\u00C1 SEGURO DE QUE DESEA DESINSTALAR EL SIGUIENTE CARTUCHO?
-confirmacion.desinstalar.cartucho.title                   = Desinstalar Cartucho
-confirmacion.eliminar.ejecucion.semilla.observatorio      = \u00BFEst\u00E1 seguro de que desea eliminar la ejecuci\u00F3n de la semilla "{0}" del observatorio?
-confirmacion.eliminar.ejecucion.semilla.observatorio.info = Se eliminar\u00E1n los resultados asociados a la ejecuci\u00F3n de la misma.
-confirmacion.eliminar.marcado                             = Eliminar
-confirmacion.eliminar.observatorio.info                   = Se eliminar\u00E1n los rastreos asociados al mismo y todos los resultados.
-confirmacion.eliminar.observatorio.nombre                 = Nombre
-confirmacion.eliminar.observatorio.pregunta               = \u00BFEst\u00E1 seguro que desea eliminar el siguiente observatorio?
-confirmacion.eliminar.observatorio.realizado              = \u00BFEst\u00E1 seguro de que desea eliminar los datos de la ejecuci\u00F3n del observatorio?
-confirmacion.eliminar.rastreo.fecha                       = Fecha ejecuci\u00F3n
-confirmacion.eliminar.rastreo.info                        = Se eliminar\u00E1n los resultados de la ejecuci\u00F3n.
-confirmacion.eliminar.rastreo.nombre                      = Nombre
-confirmacion.eliminar.rastreo.pregunta                    = \u00BFEsta seguro que desea eliminar los siguientes rastreos?
-confirmacion.eliminar.rastreo.title                       = Eliminar rastreo
-confirmacion.eliminar.semilla.complejidad                 = Complejidad
-confirmacion.eliminar.semilla.info                        = La semilla est\u00E1 o ha estado asociada a los siguientes observatorios:
-confirmacion.eliminar.semilla.info2                       = Si la borra, con ella se borrar\u00E1n los resultados de los observatorios anteriores asociados a la misma.
-confirmacion.eliminar.semilla.nombre                      = Nombre Semilla
-confirmacion.eliminar.semilla.observatorio.complejidad    = Complejidad
-confirmacion.eliminar.semilla.observatorio.info           = Se eliminar\u00E1 la asociaci\u00F3n de la semilla con el observatorio y los resultados de la misma.
-confirmacion.eliminar.semilla.observatorio.nombre         = Nombre
-confirmacion.eliminar.semilla.observatorio.pregunta       = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
-confirmacion.eliminar.semilla.observatorio.url            = Url
-confirmacion.eliminar.semilla.pregunta                    = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
-confirmacion.eliminar.semilla.title                       = Eliminar Semilla
-confirmacion.eliminar.semilla.url                         = URL
-confirmacion.exportar.resultados.observatorio.info        = La exportaci\u00F3n puede ser un proceso largo y el servidor puede tardar algunos minutos en responder dependiendo de la cantidad de resultados almacenados en el Observatorio.
-confirmacion.exportar.resultados.observatorio.pregunta    = \u00BFEst\u00E1 seguro de que desea exportar los resultados del Observatorio?
-confirmacion.relanzar.observatorio.info                   = <strong>IMPORTANTE</strong> Esta operaci\u00F3n  s\u00F3lo debe realizarse en caso de que un observatorio falle durante su ejecuci\u00F3n. Aseg\u00FArese de que realmente se ha quedado incompleto porque si lo relanza estando el observatorio en ejecuci\u00F3n puede invalidar todo el observatorio. En cualquier caso, s\u00F3lo se lanzanr\u00E1n los rastreos que quedaron pendientes. 
-confirmacion.relanzar.observatorio.pregunta               = \u00BFEst\u00E1 seguro que desea relanzar el observatorio? 
+confirmacion.borrar.cartucho                                       = Eliminar Cartucho
+confirmacion.borrar.cartucho.aplicacion                            = Aplicaci\u00F3n: 
+confirmacion.borrar.cartucho.cartucho                              = Cartucho:
+confirmacion.borrar.cartucho.eliminacion.rastreo                   = Se eliminaran los siguientes Rastreos:
+confirmacion.borrar.cartucho.pregunta                              = \u00BFEsta seguro que desea eliminar el siguiente cartucho?
+confirmacion.borrar.cartucho.title                                 = Eliminar Cartucho
+confirmacion.desinstalar.cartucho                                  = Desinstalar Cartucho
+confirmacion.desinstalar.cartucho.aplicacion                       = Aplicaci\u00F3n: 
+confirmacion.desinstalar.cartucho.cartucho                         = Cartucho: 
+confirmacion.desinstalar.cartucho.info                             = Se borrar\u00E1n todos los rastreos y usuarios asociados al cartucho 
+confirmacion.desinstalar.cartucho.pregunta                         = \u00BFEST\u00C1 SEGURO DE QUE DESEA DESINSTALAR EL SIGUIENTE CARTUCHO?
+confirmacion.desinstalar.cartucho.title                            = Desinstalar Cartucho
+confirmacion.eliminar.ejecucion.semilla.observatorio               = \u00BFEst\u00E1 seguro de que desea eliminar la ejecuci\u00F3n de la semilla "{0}" del observatorio?
+confirmacion.eliminar.ejecucion.semilla.observatorio.info          = Se eliminar\u00E1n los resultados asociados a la ejecuci\u00F3n de la misma.
+confirmacion.eliminar.marcado                                      = Eliminar
+confirmacion.eliminar.observatorio.info                            = Se eliminar\u00E1n los rastreos asociados al mismo y todos los resultados.
+confirmacion.eliminar.observatorio.nombre                          = Nombre
+confirmacion.eliminar.observatorio.pregunta                        = \u00BFEst\u00E1 seguro que desea eliminar el siguiente observatorio?
+confirmacion.eliminar.observatorio.realizado                       = \u00BFEst\u00E1 seguro de que desea eliminar los datos de la ejecuci\u00F3n del observatorio?
+confirmacion.eliminar.rastreo.fecha                                = Fecha ejecuci\u00F3n
+confirmacion.eliminar.rastreo.info                                 = Se eliminar\u00E1n los resultados de la ejecuci\u00F3n.
+confirmacion.eliminar.rastreo.nombre                               = Nombre
+confirmacion.eliminar.rastreo.pregunta                             = \u00BFEsta seguro que desea eliminar los siguientes rastreos?
+confirmacion.eliminar.rastreo.title                                = Eliminar rastreo
+confirmacion.eliminar.semilla.complejidad                          = Complejidad
+confirmacion.eliminar.semilla.info                                 = La semilla est\u00E1 o ha estado asociada a los siguientes observatorios:
+confirmacion.eliminar.semilla.info2                                = Si la borra, con ella se borrar\u00E1n los resultados de los observatorios anteriores asociados a la misma.
+confirmacion.eliminar.semilla.nombre                               = Nombre Semilla
+confirmacion.eliminar.semilla.observatorio.complejidad             = Complejidad
+confirmacion.eliminar.semilla.observatorio.info                    = Se eliminar\u00E1 la asociaci\u00F3n de la semilla con el observatorio y los resultados de la misma.
+confirmacion.eliminar.semilla.observatorio.nombre                  = Nombre
+confirmacion.eliminar.semilla.observatorio.pregunta                = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
+confirmacion.eliminar.semilla.observatorio.url                     = Url
+confirmacion.eliminar.semilla.pregunta                             = \u00BFEst\u00E1 seguro que desea eliminar la siguiente semilla?
+confirmacion.eliminar.semilla.title                                = Eliminar Semilla
+confirmacion.eliminar.semilla.url                                  = URL
+confirmacion.exportar.resultados.observatorio.info                 = La exportaci\u00F3n puede ser un proceso largo y el servidor puede tardar algunos minutos en responder dependiendo de la cantidad de resultados almacenados en el Observatorio.
+confirmacion.exportar.resultados.observatorio.pregunta             = \u00BFEst\u00E1 seguro de que desea exportar los resultados del Observatorio?
+confirmacion.exportar.resultados.observatorio.recurrencia          = Recurrencia -  Comparar con :
+confirmacion.exportar.resultados.observatorio.recurrencia.anterior = Iteraci\u00F3n anterior
+confirmacion.exportar.resultados.observatorio.recurrencia.fija     = Recurrencia parte fija
+confirmacion.exportar.resultados.observatorio.recurrencia.primera  = Primera iteraci\u00F3n
+confirmacion.exportar.resultados.observatorio.recurrencia.variable = Recurrencia parte {0}
+confirmacion.relanzar.observatorio.info                            = <strong>IMPORTANTE</strong> Esta operaci\u00F3n  s\u00F3lo debe realizarse en caso de que un observatorio falle durante su ejecuci\u00F3n. Aseg\u00FArese de que realmente se ha quedado incompleto porque si lo relanza estando el observatorio en ejecuci\u00F3n puede invalidar todo el observatorio. En cualquier caso, s\u00F3lo se lanzanr\u00E1n los rastreos que quedaron pendientes. 
+confirmacion.relanzar.observatorio.pregunta                        = \u00BFEst\u00E1 seguro que desea relanzar el observatorio? 
 
 confirmar.borrar.certificado      = Confirmaci\u00F3n de borrado de certificado.
 confirmar.borrar.certificado.info = Si est\u00E1 seguro de que quiere eliminar este certificado, por favor, conf\u00EDrmelo a continuaci\u00F3n.
