New XML annex redmine #602 y #604
Change umbral consideration

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -2615,10 +2615,14 @@ observatory.check.modality.text.red                                           = 
 observatory.evolution.segment.title                                           = Evoluci\u00F3n del segmento {0}
 observatory.extra.config.autorelaunch                                         = Relanzamientos autom\u00E1ticos
 observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.depth                                                = Profundidad relanzamiento (niveles)
 observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
+observatory.extra.config.realunch.timeout                                     = Timeout relanzamiento (ms)
+observatory.extra.config.theshold                                             = Umbral de relanzamiento (<= % p\u00E1ginas analizadas)
 observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
 observatory.extra.config.value                                                = Valor
+observatory.extra.config.width                                                = Anchura relanzamiento (niveles)
 observatory.global.allocation.segment.comparision.table.title                 = Nivel de adecuaci\u00F3n estimado (% de sitios web) por segmento
 observatory.graphic.accesibility.evolution.approval.A.name                    = EvolucionNivelConformidadAccesibilidadA
 observatory.graphic.accesibility.evolution.approval.AA.name                   = EvolucionNivelConformidadAccesibilidadAA
@@ -2757,8 +2761,8 @@ observatory.status.pending.caption                                            = 
 observatory.status.pending.name                                               = Nombre\n
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
-observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas
-observatory.status.percent.threshold.filter.percent                           = % de p\u00E1ginas analizadas
+observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas (n\u00BA)
+observatory.status.percent.threshold.filter.percent                           = P\u00E1ginas analizadas (%)
 observatory.status.relaunh                                                    = Relanzar esta iteraci\u00F3n del observarorio
 observatory.status.results                                                    = Resultados
 observatory.status.status                                                     = Estado
