--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2449,10 +2449,14 @@ observatory.check.modality.text.green                                         = 
 observatory.check.modality.text.red                                           = Por lo tanto, valor = 0 y modalidad = falla
 observatory.extra.config.autorelaunch                                         = Relanzamientos autom\u00E1ticos
 observatory.extra.config.button                                               = Configuraci\u00F3n global
+observatory.extra.config.depth                                                = Profundidad relanzamiento (niveles)
 observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
+observatory.extra.config.realunch.timeout                                     = Timeout relanzamiento (ms)
+observatory.extra.config.theshold                                             = Umbral de relanzamiento (<= % p\u00E1ginas analizadas)
 observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
 observatory.extra.config.value                                                = Valor
+observatory.extra.config.width                                                = Anchura relanzamiento (niveles)
 observatory.graphic.accesibility.evolution.approval.A.name                    = EvolucionNivelConformidadAccesibilidadA
 observatory.graphic.accesibility.evolution.approval.AA.name                   = EvolucionNivelConformidadAccesibilidadAA
 observatory.graphic.accesibility.evolution.approval.NV.name                   = EvolucionNivelConformidadAccesibilidadNV
@@ -2558,8 +2562,8 @@ observatory.status.notes.running                                              = 
 observatory.status.notes.title                                                = Notas:
 observatory.status.pending.title                                              = Semillas sin procesar a\u00FAn
 observatory.status.percent.threshold                                          = Porcentaje de p\u00E1ginas analizadas respecto a la complejidad de la semilla
-observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas
-observatory.status.percent.threshold.filter.percent                           = % de p\u00E1ginas analizadas
+observatory.status.percent.threshold.filter.number                            = P\u00E1ginas analizadas (n\u00BA)
+observatory.status.percent.threshold.filter.percent                           = P\u00E1ginas analizadas (%)
 observatory.status.summary.seed.processed                                     = Semillas procesadas
 observatory.status.summary.seed.results                                       = Semillas procesadas con resultados
 observatory.stop.info                                                         = <strong>IMPORTANTE</strong> Esta operaci\u00F3n detendr\u00E1 la ejecuci\u00F3n del observatorio y para continuar con ella, deber\u00E1 ejecutar el relanzmiento de forma manual. \n<p>No se eliminar\u00E1 ning\u00FAn an\u00E1lisis previo a esta operaci\u00F3n.</p>
