Keys for new extra configuration

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2450,9 +2450,11 @@ observatory.check.modality.text.red                                           = 
 observatory.extra.config.autorelaunch                                         = Relanzamientos autom\u00E1ticos
 observatory.extra.config.button                                               = Configuraci\u00F3n global
 observatory.extra.config.depth                                                = Profundidad relanzamiento (niveles)
+observatory.extra.config.first.classification.threshold                       = Margen mejora (para comparativas en anexos)
 observatory.extra.config.info                                                 = Configuraci\u00F3n global aplicable a todos los observatorios. Esta configuraci\u00F3n es utilizada por los procesos de relanzamiento. Puede editar la configuraci\u00F3n pulsando sobre los valores de la tabla inferior:
 observatory.extra.config.name                                                 = Nombre
 observatory.extra.config.realunch.timeout                                     = Timeout relanzamiento (ms)
+observatory.extra.config.second.classification.threshold                      = Margen mucha mejora (para comparativas en anexos)
 observatory.extra.config.theshold                                             = Umbral de relanzamiento (<= % p\u00E1ginas analizadas)
 observatory.extra.config.title                                                = Configuraci\u00F3n global de observatorios
 observatory.extra.config.value                                                = Valor
