--- a/wcagemtool/app/locale/EN/common.json
+++ b/wcagemtool/app/locale/EN/common.json
@@ -2,6 +2,8 @@
     "BROWSER_NOT_SUPPORTED": "The web browser you are using does not support some functionality, such as saving and loading reports. You can continue to use the Report Tool with limited functionality. Update or use a different web browser to make use of all functionality of this report tool.",
     "WARNING_BEFORE_UNLOAD": "The data you entered is not automatically saved. It will be lost if you close this web browser window. Use the 'Save' link (Ctrl + S or ⌘ S) that is at the top of all pages to save your data in a file locally on your computer, and reload it later to continue working on it.",
     "MORE_INFO": "For more information, see <a href={{url}}>{{name}}</a>.",
+    "MORE_INFO_1": "For more information, see <a hreflang='en' title='WCAG-EM Step 1.a: Define the scope of the website (opens in new window)' href={{url}}>{{{name}}</a>.",
+    "MORE_INFO_2": "For more information, see <a hreflang='en' title='WCAG-EM Step 1.d: Define additional evaluation requirements (opens in new window)' href={{url}}>{{name}}</a>.", 
     "HIDE_MESSAGE": "Hide message",
     "BTN_INFO": "Info expand",
     "BTN_CLOSE_INFO": "Close info",
