--- a/wcagemtool/app/locale/EN/report.json
+++ b/wcagemtool/app/locale/EN/report.json
@@ -14,5 +14,8 @@
     "INF_SUMMARY": "Provide a brief summary of the evaluation findings to give an overview on the results. For example, describe the overall accessibility of the website and key observations you made during the evaluation, such as frequently occurring issues and patterns.",
     "LABEL_SPECIFICS": "Record of evaluation specifics (optional)",
     "INF_SPECIFICS": "WCAG-EM suggests that you archive the web pages audited. For more information, see <a href={{link_em_5b}} title='WCAG-EM Step 5.b: Record the Evaluation Specifics (opens in new window)'>WCAG-EM Step 5.b: Record the Evaluation Specifics</a>. You can use this text field to record the evaluation tools, web browsers, assistive technologies, other software, and methods used for the evaluation. What you enter here will be included in the generated report. After you download the report, you could delete or edit this information in the HTML file before submitting the report.",
-    "HD_CRITERIA_REPORT": "Detailed audit results"
+    "HD_CRITERIA_REPORT": "Detailed audit results",
+    "REPORT_FINISHED": "<strong>Review completed:</strong> Yes",
+    "REPORT_UNFINISHED": "<strong>Review completed:</strong> No",
+    "REPORT_UNFINISHED_INFO": "There are validation criteria marked as 'Not tested' or 'Do not decide'."
 }
