CRUD dependency update with new fields

--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -351,6 +351,8 @@ colname.acronym       = Acr\u00F3nimo
 colname.active        = Activa
 colname.analysis.type = Tipo de an\u00E1lisis
 colname.depthReport   = Informe en profundidad
+colname.province      = Provincia
+colname.send.auto     = Env\u00EDo autom\u00E1tico
 
 conectividad.form.title            = Comprobaci\u00F3n de URL
 conectividad.form.url              = URL
